code before editing

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,32 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+    <div class="jumbotron">
+        <h1 class="display-4">This is a simple App to keep record of all the issues happening<i class="fa fa-list-ul"></i></h1>
+        
+        <hr class="my-4">
+        <p class="lead">Following are the functionalities<i class="fa fa-level-down-alt"></i></p>
+        <ul>
+          <li class="text text-info"> <i class="fa fa-plus">Add Issue</i> </li>
+          <li class="text text-info"><i class="fa   fa-edit">Update Issue</i> </li>
+          <li class="text text-info"><i class="fa  fa-trash">Delete Issue </i></li>
+          <li class="text text-info"><i class="fa  fa-trash-alt"> Bulk Delete</i></li>
+          <li class="text text-info"><i class="fa  fa-exchange-alt"> Change View</i></li>
+          <li class="text text-info"><i class="fa  fa-mouse-pointer"> Click on details</i></li>
+        </ul>
+        
+      </div>
   <app-root></app-root>
+  
+</div>
+</div>
+<footer class="container-fluid">
+  <div class="well text text-center">All the rights are reserved by Wipro Limited</div>
+</footer>
 </body>
 </html>
